ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations: 
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
#     cert-manager.io/issuer: "letsencrypt-prod"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
# spec:
#   tls: 
#     - hosts: 
#       - facezongoogappflix.space
#       - www.facezongoogappflix.space
#       secretName: facezongoogappflix.space-secret
#   rules:
#     - host: facezongoogappflix.space
#       http:
#         paths:
#           - path: /?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: client-cluster-ip-service
#                 port:
#                   number: 3000
#           - path: /api/?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: server-cluster-ip-service
#                 port:
#                   number: 5000
#     - host: www.facezongoogappflix.space
#       http:
#         paths:
#           - path: /?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: client-cluster-ip-service
#                 port:
#                   number: 3000
#           - path: /api/?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: server-cluster-ip-service
#                 port:
#                   number: 5000
